; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/dw/extr_core.c_do_dw_dma_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/dw/extr_core.c_do_dw_dma_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_dma_chip = type { %struct.dw_dma* }
%struct.dw_dma = type { i32 (%struct.dw_dma*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_dw_dma_enable(%struct.dw_dma_chip* %0) #0 {
  %2 = alloca %struct.dw_dma_chip*, align 8
  %3 = alloca %struct.dw_dma*, align 8
  store %struct.dw_dma_chip* %0, %struct.dw_dma_chip** %2, align 8
  %4 = load %struct.dw_dma_chip*, %struct.dw_dma_chip** %2, align 8
  %5 = getelementptr inbounds %struct.dw_dma_chip, %struct.dw_dma_chip* %4, i32 0, i32 0
  %6 = load %struct.dw_dma*, %struct.dw_dma** %5, align 8
  store %struct.dw_dma* %6, %struct.dw_dma** %3, align 8
  %7 = load %struct.dw_dma*, %struct.dw_dma** %3, align 8
  %8 = getelementptr inbounds %struct.dw_dma, %struct.dw_dma* %7, i32 0, i32 0
  %9 = load i32 (%struct.dw_dma*)*, i32 (%struct.dw_dma*)** %8, align 8
  %10 = load %struct.dw_dma*, %struct.dw_dma** %3, align 8
  %11 = call i32 %9(%struct.dw_dma* %10)
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
